# Smart_Light_Switch

./: .gitignore  .gitmodules  CLAUDE.md  README.md
.github/workflows/: docker.yml
App/: .gitignore  README.md  create.sh  create.shc  pubspec.yaml
App/lib/: main.dart
App/linux/: CMakeLists.txt
App/test/: widget_test.dart
App/tool/: generate_app_icon.py
Backend/: .env.example  README.md  docker-compose.yml  requirements.txt  smart_light_switch_backend.bundle  smart_light_switch_backend.patch
Firmware/: .gitignore  CMakeLists.txt  README.md  TEMPLATE.md  board_config.h  calude_context.md  changelog.md  partitions.csv  sdkconfig  sdkconfig.old
Firmware/communication/: CMakeLists.txt  ble_setup.cpp  ble_setup.h  comm_manager.cpp  comm_manager.h  communication_stub.cpp  device_identity.h  http_api.h  mqtt_client.cpp  mqtt_manager.h  wifi_manager.cpp  wifi_manager.h
Firmware/ui/: CMakeLists.txt  display_manager.cpp  display_manager.h  lvgl_port.cpp  lvgl_port.h  ui_manager.cpp  ui_manager.h  ui_state.h  ui_stub.cpp  ui_theme.h  ui_widgets.cpp  ui_widgets.h
Firmware/ui/images/: image_beijinho.c  image_dedinho.c  image_linda.h  image_lindademais.c  image_milkshake.c  image_natal.c  image_noiva.c  image_olharpredador.c  image_paz.c  image_paz.h  image_skincare.c  image_skincare.h
Firmware/ui/screens/: screen_auto.cpp  screen_auto.h  screen_main.cpp  screen_main.h  screen_settings.cpp  screen_settings.h
Firmware/ui/tools/: convert_image.py
Firmware/ui/wireframes/: Interruptor Inteligente - Wireframes.html  MainPage.html  wireframe-screens.jsx
(+109 files in other folders)
